<resources>
    <string name="app_name">Pawtroller-PSM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">FullscreenActivity</string>
    <string name="nombre_foro">Forum</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="boton_login">Login</string>
    <string name="liga_no_usuario">¿Aun no eres Usuario?</string>
    <string name="registrate">Registrate</string>
    <string name="password_text">Confirmación \n
        New Pass: </string>
    <string name="password_text_btn">Cambiar</string>
    <string name="title_activity_crear_pet">CrearPetActivity</string>
    <string name="tipo_mascota">Tpo de mascota:</string>
    <string name="btn_crear_pet">Siguiente</string>
    <string name="titulo_crear_pet">Mi Mascota</string>
    <string name="instrucciones_foto_pet">Agrega una foto de tu mascota</string>
    <string name="btn_foto_pet">Registrar Mascota</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>