<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaFotoPet">

<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/contraintCrearPet"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/primary">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/ic_pets" />

        <TextView
            android:id="@+id/textViewReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:text="@string/titulo_crear_pet"
            android:textAlignment="center"
            android:textColor="@color/primary_light"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/ic_pets" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewRegCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/instrucciones_foto_pet"
        android:textColor="@color/icons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/layRegCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="110dp"
        android:background="@color/primary_dark"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegCon">

        <TextView
            android:id="@+id/textViewRegcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="selecciona aqui tu foto"
            android:textColor="@color/icons"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgRegCon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:clickable="true"
            android:elevation="6dp"
            app:srcCompat="@drawable/mascota"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/nameRegCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:backgroundTint="@color/primary_dark"
            android:backgroundTintMode="src_over"
            android:gravity="center|center_horizontal|center_vertical"
            android:textColor="@color/icons"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegPet2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="70dp"
        android:background="@color/accent"
        android:elevation="6dp"
        android:text="@string/btn_foto_pet"
        android:textColor="@color/icons"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layRegCon" />

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>