<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="Descripcion"
    android:background="@color/primary_light"
    android:backgroundTint="@color/black_overlay"
    android:backgroundTintMode="src_over"
    tools:context=".CrearPet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contraintCrearPet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCerrarVentana"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/icons"
            android:backgroundTintMode="src_over"
            android:clickable="true"
            android:elevation="6dp"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:backgroundTintMode="src_over"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_pets" />

            <TextView
                android:id="@+id/textViewReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:text="@string/titulo_crear_pet"
                android:textAlignment="center"
                android:textColor="@color/primary_light"
                android:textSize="36sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_pets" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:backgroundTintMode="src_over"
            android:elevation="6dp"
            android:hint="Name"
            android:textColorHint="@color/icons"
            app:boxBackgroundMode="outline"
            app:hintTextColor="@color/icons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/namePetReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:singleLine="true"
                android:textColor="@color/icons"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputReg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="70dp"
            android:hint="Nickname"
            android:textColorHint="@color/icons"
            app:hintTextColor="@color/icons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputReg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nicknamePetReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nickname"
                android:singleLine="true"
                android:textColor="@color/icons"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="70dp"
            android:hint="Descripcion:"
            android:textColorHint="@color/icons"
            app:boxBackgroundMode="filled"
            app:hintTextColor="@color/icons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputReg2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputReg4"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:background="@color/primary_dark"
                android:backgroundTint="@color/primary_dark"
                android:backgroundTintMode="src_over"
                android:hint="Descripcion:"
                android:maxLength="100"
                android:textAlignment="viewStart"
                android:textColor="@color/icons"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputReg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contextClickable="false"
                android:textAlignment="center"
                android:textColorHint="@color/icons"
                app:boxBackgroundMode="none"
                app:hintTextColor="@color/icons">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bithdatePetReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:contextClickable="false"
                    android:editable="false"
                    android:enabled="false"
                    android:gravity="center"
                    android:hint="Fecha de nacimiento:"
                    android:textAlignment="center"
                    android:textColor="@color/icons"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonFechaPetReg"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:background="@android:drawable/ic_menu_my_calendar"
                android:backgroundTintMode="src_over"
                android:elevation="6dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:marqueeRepeatLimit="marquee_forever" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textInputReg5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/textInputreg5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/tipo_mascota"
                android:textColor="@color/icons"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerRegPet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:popupBackground="@color/divider"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal|center_vertical"
                android:textColor="@color/icons"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCrearPet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:background="@color/accent"
            android:elevation="6dp"
            android:text="@string/btn_crear_pet"
            android:textColor="@color/icons"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputReg5" />

        <TextView
            android:id="@+id/tipePetReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="gone"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>